@startuml StrategyPattern
!theme plain

skinparam backgroundColor #FEFEFE
skinparam classBackgroundColor #F5F5F5
skinparam classBorderColor #333333
skinparam arrowColor #333333

title Strategy Design Pattern - Crypto Arbitrage

package "Behavioral.Strategy" {
    interface IArbitrageStrategy as "<<Strategy>>\nIArbitrageStrategy" {
        + StrategyName : string
        + Evaluate(symbol, prices, feePercent) : StrategyEvaluationResult
    }

    class SimpleArbitrageStrategy as "<<ConcreteStrategy>>\nSimpleArbitrageStrategy"
    class SpreadBasedStrategy as "<<ConcreteStrategy>>\nSpreadBasedStrategy"
    class TriangularArbitrageStrategy as "<<ConcreteStrategy>>\nTriangularArbitrageStrategy"

    class ArbitrageStrategyContext as "<<Context>>\nArbitrageStrategyContext" {
        - _strategy : IArbitrageStrategy
        + SetStrategy(strategy) : void
        + Analyze(symbol, prices, feePercent) : StrategyEvaluationResult
    }

    class StrategyEvaluationResult
}

IArbitrageStrategy <|.. SimpleArbitrageStrategy
IArbitrageStrategy <|.. SpreadBasedStrategy
IArbitrageStrategy <|.. TriangularArbitrageStrategy

ArbitrageStrategyContext --> IArbitrageStrategy : uses
ArbitrageStrategyContext ..> StrategyEvaluationResult : returns

@enduml
